Text overflow fix#1

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11270,3 +11270,7 @@ header.masthead .site-heading .h1 {
 .help-block {
   color: red;
 }
+
+.pre {
+  text-overflow: auto;
+}
